# SnakeGame

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: IGame.hpp
src/Game/: Snake.cpp  Snake.hpp
src/Graphics/: Graphics.cpp  Graphics.hpp
src/Utils/: Error.hpp  Inputs.hpp  Map.cpp  Map.hpp
